test-cases/negative/test_025_while_without_condition.lay
# negative test: while without condition
# expected: error should be thrown

while do
  print 'loop'


